--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <p>Hello From Angular</p>
 <!--<sandbox1></sandbox1>-->
-<sandbox></sandbox>
-
+<!--<sandbox></sandbox>-->
+<!--<sandboxtwo></sandboxtwo>-->
+<sandboxthree></sandboxthree>
