--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -2,4 +2,6 @@
 <!--<sandbox1></sandbox1>-->
 <!--<sandbox></sandbox>-->
 <!--<sandboxtwo></sandboxtwo>-->
-<sandboxthree></sandboxthree>
+<!--<sandboxthree></sandboxthree>-->
+<!--<app-sandbox-four></app-sandbox-four>-->
+<app-sandbox-five></app-sandbox-five>
