--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -4,4 +4,5 @@
 <!--<sandboxtwo></sandboxtwo>-->
 <!--<sandboxthree></sandboxthree>-->
 <!--<app-sandbox-four></app-sandbox-four>-->
-<app-sandbox-five></app-sandbox-five>
+<!--<app-sandbox-five></app-sandbox-five>-->
+<app-sandbox-six></app-sandbox-six>
