--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -5,4 +5,8 @@
 <!--<sandboxthree></sandboxthree>-->
 <!--<app-sandbox-four></app-sandbox-four>-->
 <!--<app-sandbox-five></app-sandbox-five>-->
-<app-sandbox-six></app-sandbox-six>
+<!--<app-sandbox-six></app-sandbox-six>-->
+<!--<app-sandbox-service></app-sandbox-service>
+<app-sandbox-observables></app-sandbox-observables>-->
+<app-sandbox-http-get></app-sandbox-http-get>
+<!--<router-outlet></router-outlet>-->
